--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@polymer/paper-listbox": "^3.0.1",
     "@polymer/polymer": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "web-animations-js": "^2.3.1"
+    "web-animations-js": "^2.3.1",
+    "@polymer/iron-ajax":"^3.0.1"
   },
   "devDependencies": {
     "polymer-cli": "^1.7.1",
