--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@polymer/polymer": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "web-animations-js": "^2.3.1",
-    "@polymer/iron-ajax":"^3.0.1"
+    "@polymer/iron-ajax":"^3.0.1",
+    "@polymer/paper-button":"^3.0.1",
+    "@vaadin/vaadin-button":"^2.1.1",
+    "@polymer/iron-form":"^3.0.1"
   },
   "devDependencies": {
     "polymer-cli": "^1.7.1",
