--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@polymer/iron-ajax":"^3.0.1",
     "@polymer/paper-button":"^3.0.1",
     "@vaadin/vaadin-button":"^2.1.1",
-    "@polymer/iron-form":"^3.0.1"
+    "@polymer/iron-form":"^3.0.1",
+    "@polymer/paper-input":"^3.0.1"
   },
   "devDependencies": {
     "polymer-cli": "^1.7.1",
