--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@vaadin/vaadin-button":"^2.1.1",
     "@polymer/iron-form":"^3.0.1",
     "@polymer/paper-input":"^3.0.1",
-    "@polymer/paper-toast":"^3.0.1"
+    "@polymer/paper-toast":"^3.0.1",
+    "@vaadin/vaadin-text-field":"^2.1.5"
   },
   "devDependencies": {
     "polymer-cli": "^1.7.1",
