--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@polymer/iron-form":"^3.0.1",
     "@polymer/paper-input":"^3.0.1",
     "@polymer/paper-toast":"^3.0.1",
-    "@vaadin/vaadin-text-field":"^2.1.5"
+    "@vaadin/vaadin-text-field":"^2.1.5",
+    "@polymer/paper-checkbox":"^3.1.0"
   },
   "devDependencies": {
     "polymer-cli": "^1.7.1",
