--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@polymer/paper-input":"^3.0.1",
     "@polymer/paper-toast":"^3.0.1",
     "@vaadin/vaadin-text-field":"^2.1.5",
-    "@polymer/paper-checkbox":"^3.1.0"
+    "@polymer/paper-checkbox":"^3.1.0",
+    "@polymer/iron-collapse":"^3.0.1",
+    "@polymer/iron-icons":"^3.0.1"
   },
   "devDependencies": {
     "polymer-cli": "^1.7.1",
